# exobrain

./: .dockerignore  .gitignore  AGENTS.md  README.md  shell.nix
apps/assistant-backend/: .env.example  AGENTS.md  README.md  pyproject.toml
apps/assistant-backend/app/: __init__.py  main.py
apps/assistant-backend/app/agents/: __init__.py  base.py  factory.py  main_assistant.py  mock_assistant.py  model_provider_chat_model.py
apps/assistant-backend/app/api/: __init__.py  router.py
apps/assistant-backend/app/contracts/: __init__.py  tools.py
apps/assistant-backend/app/core/: __init__.py  logging.py  settings.py
apps/assistant-backend/app/dependency_injection/: __init__.py  container.py
apps/assistant-backend/app/services/: __init__.py  auth_service.py  chat_service.py  chat_stream.py  contracts.py  conversation_service.py  database_service.py  job_orchestrator_client.py  job_publisher.py  journal_cache_store.py  journal_service.py  knowledge_interface_client.py  knowledge_service.py  knowledge_stream.py  mcp_client.py  session_store.py  user_config_service.py  user_service.py
apps/assistant-backend/docs/: chat-stream-sse-contract.md  knowledge-category-page-contract.md  knowledge-update-sse-contract.md
apps/assistant-backend/mock-data/: main-agent-messages.md  web-tools.mock.json
apps/assistant-backend/mock-data/knowledge/: upsert-graph-delta.request.template.json
apps/assistant-backend/scripts/: verify.sh
apps/assistant-backend/tests/: conftest.py  mcp_server_auth.py  test_agent_factory.py  test_auth_dependency.py  test_auth_router.py  test_auth_service.py  test_chat_router.py  test_chat_service.py  test_conversation_service.py  test_dependency_injection.py  test_job_orchestrator_client.py  test_jobs_router.py  test_journal_cache_store.py  test_journal_router.py  test_journal_service.py  test_knowledge_interface_client.py  test_knowledge_router.py  test_knowledge_schemas.py  test_knowledge_service.py  test_main_assistant_agent.py  test_mcp_client.py  test_mcp_tooling.py  test_model_provider_chat_model.py  test_session_store.py  test_settings.py  test_tool_contracts.py  test_user_config_service.py  test_users_router.py  test_web_tools.py
apps/assistant-backend/tests/integration/: .env.integration.example  test_api_integration.py  test_mcp_tool_bridge_integration.py
apps/job-orchestrator/: .env.example  README.md  pyproject.toml
apps/job-orchestrator/app/: __init__.py  contracts.py  database.py  jetstream.py  job_repository.py  logging.py  main_api.py  main_worker.py  orchestrator.py  settings.py  worker.py
apps/job-orchestrator/app/services/: model_provider_chat_model.py
apps/job-orchestrator/app/worker/: __init__.py  job_registry.py  process_runner.py
apps/job-orchestrator/proto/: job_orchestrator.proto
apps/job-orchestrator/tests/: test_api_service.py  test_job_repository.py  test_knowledge_pb2_sync.py  test_knowledge_update_job.py  test_model_provider_chat_model.py  test_process_runner_integration.py  test_process_runner_logging.py  test_settings.py  test_worker.py
apps/job-orchestrator/tests/knowledge_update/: test_orchestrator_and_shared.py  test_step01_graph_seed.py  test_step02_entity_extraction.py  test_step03_04_05.py  test_step06_07_08.py  test_step09_10.py  test_strict_response_format_steps.py  test_worker_logging.py
apps/knowledge-interface/: .env.example  AGENTS.md  Cargo.toml  README.md  build.rs
apps/knowledge-interface/docs/: grpc-api.md  implementation.md
apps/knowledge-interface/mock-data/knowledge/: initialize-user-graph.request.json  upsert-graph-delta.actuary-large.request.template.json  upsert-graph-delta.request.template.json
apps/knowledge-interface/proto/: knowledge.proto
apps/knowledge-interface/scripts/: verify.sh
apps/knowledge-interface/src/: adapters.rs  config.rs  domain.rs  main.rs  ports.rs  service.rs
apps/knowledge-interface/src/application/: errors.rs  graph_resolution.rs  mod.rs  pagination.rs  tests.rs  type_hierarchy.rs  validation.rs
apps/knowledge-interface/src/domain/: mod.rs
apps/knowledge-interface/src/infrastructure/: embedding.rs  legacy.rs  memgraph.rs  mod.rs  postgres.rs  qdrant.rs  repository.rs
apps/knowledge-interface/src/presentation/: entity_context_prompt.rs  extraction_prompt.rs  mod.rs  upsert_delta_json_schema.rs  upsert_delta_json_schema_generator.rs
apps/knowledge-interface/src/service/: candidate_search.rs  entity_context.rs  entity_listing.rs  extraction_schema.rs  ingestion.rs  mod.rs
apps/knowledge-interface/src/transport/: errors.rs  grpc.rs  mappers.rs  mod.rs
apps/mcp-server/: .env.example  README.md  pyproject.toml
apps/mcp-server/app/: contracts.py  main.py  settings.py
apps/mcp-server/app/adapters/: entity_context_markdown_formatter.py  knowledge_interface_client.py  knowledge_registry_builder.py  tavily.py  tool_adapters.py  tool_registry.py  utility_registry_builder.py  web_registry_builder.py  web_tools.py
apps/mcp-server/app/contracts/: __init__.py  health.py  tools.py
apps/mcp-server/app/services/: auth_service.py  request_context.py  tool_service.py
apps/mcp-server/docs/: tool-contracts.md
apps/mcp-server/scripts/: verify.sh
apps/mcp-server/tests/: auth_helpers.py  test_entity_context_markdown_formatter.py  test_main.py  test_tool_composition.py  test_tool_contract_schemas.py  test_tool_registry_dispatch.py  test_web_fetch_compatibility.py  test_web_provider_wiring.py  test_web_search_compatibility.py
apps/model-provider/: .env.example  README.md  pyproject.toml
apps/model-provider/app/: config.py  main.py  settings.py
apps/model-provider/app/contracts/: native_chat.py
apps/model-provider/app/providers/: base.py  (+2 more)
apps/model-provider/config/: models.yaml
apps/model-provider/tests/: test_config.py  test_main.py  test_provider_clients.py
(+268 files in other folders)
