[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "exobrain-assistant-backend"
version = "0.1.0"
description = "FastAPI service for Exobrain Assistant"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.30.0",
  "langchain>=0.2.0",
  "langchain-openai>=0.1.0",
  "pydantic-settings>=2.3.0"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
