[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "exobrain-job-orchestrator"
version = "0.1.0"
description = "NATS-backed job orchestrator and worker for Exobrain"
requires-python = ">=3.11"
dependencies = [
  "asyncpg>=0.30.0",
  "nats-py>=2.9.0",
  "grpcio>=1.66.0",
  "protobuf>=5.27.0",
  "pydantic-settings>=2.3.0",
  "langchain>=0.2.0",
  "langchain-openai>=0.1.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.23.0",
  "ruff>=0.12.0"
]

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["F"]

[tool.ruff.lint.per-file-ignores]
"app/services/grpc/*.py" = ["F401", "F821"]
"app/transport/grpc/*.py" = ["F401", "F821"]
